--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-  <h1>Провека синхронизации!</h1>
+  <h1>Провека синхронизации! еще раз</h1>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
 
   </body>
