--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,126 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
-  <h1>Провека синхронизации! еще раз!!!</h1>
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Кэт энерджи - Функциональное питание для котов</title>
+</head>
+<body>
+<header class="page-header">
+  <a class="page-header__logo">
+    <img class="page-header__logo-img" src="https://via.placeholder.com/150x150" width="191" height="39" alt="логотип Cat Energy">
+  </a>
+  <nav class="main-nav">
+    <div class="main-nav__wrapper">
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+          <a class="site-list__link" href="#">Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a class="site-list__link" href="#">Каталог продукции</a>
+        </li>
+        <li class="site-list__item">
+          <a class="site-list__link" href="#">Подбор Программы</a>
+        </li>
+      </ul>
+    </div>
+    <button class="page-header__toggle" type="button">Открыть меню</button>
+  </nav>
+</header>
+<main class="page-main">
+  <section class="hero">
+    <h1 class="hero__title">Функциональное питание для котов</h1>
+    <p class="hero__subtitle">Занялся собой? Займись котом!</p>
+    <img class="hero__img" src="https://via.placeholder.com/150x150" width="280" height="270" alt="Питание Cat Energy Pro со вкусом курицы">
+    <a class="hero__button" href="#">Подобрать програму</a>
+  </section>
+  <section class="scheme">
+    <h2 class="visually-hidden">Выбор программы</h2>
+    <ul class="scheme__list">
+      <li class="scheme__item scheme__item--sit">
+        <h3 class="scheme__title">Похудение</h3>
+        <p class="scheme__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+        <a class="scheme__link" href="#">Каталог slim</a>
+      </li>
+      <li class="scheme__item scheme__item--stand">
+        <h3 class="scheme__title">Набор массы</h3>
+        <p class="scheme__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+        <a class="scheme__link" href="#">Каталог pro</a>
+      </li>
+    </ul>
+  </section>
+  <section class="features">
+    <h2 class="features__title">Как это работает</h2>
+    <ul class="features__list">
+      <li class="features__item features__item--sheet">
+        <p class="features__description">Функциональное питание содержит только полезные питательные вещества.</p>
+      </li>
+      <li class="features__item features__item--tank">
+        <p class="features__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+      </li>
+      <li class="features__item features__item--tableware">
+        <p class="features__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+      </li>
+      <li class="features__item features__item--clock">
+        <p class="features__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+      </li>
+    </ul>
+  </section>
+  <section class="example">
+    <h2 class="example__title">Живой пример</h2>
+    <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+  </section>
+  <section class="example-illustration">
+    <h2 class="visually-hidden">Интерактивный пример</h2>
+    <div class="example-illustration__value indicators">
+      <div class="indicators__wrapper">
+        <p class="indicators__value indicators__value--border">5 кг</p>
+        <p class="indicators__description">снижение веса</p>
+      </div>
+      <div class="indicators__wrapper">
+        <p class="indicators__value indicators__value--border">60 дней</p>
+        <p class="indicators__description">затрачено времени</p>
+      </div>
+    </div>
+    <p class="example-illustration__price">Затраты на питание: 15 000 руб.</p>
+    <div class="example-illustration__slider example-slider">
+      <ul class="example-slider__list">
+        <li class="example-slider__item">
+          <img class="example-illustration__img" src="https://via.placeholder.com/150x150" width="311" height="232" alt="Ваша кошка До замены обычного корма, на корм Cat Energy Slim">
+        </li>
+        <li class="example-slider__item">
+          <img class="example-illustration__img" src="https://via.placeholder.com/150x150" width="311" height="232" alt="Ваша кошка После замены обычного корма, на корм Cat Energy Slim">
+        </li>
+      </ul>
+    </div>
+    <div class="example-illustration__toggle">
+      <button class="example-illustration__button" type="button">Было</button>
+      <div class="example-illustration__scale">
+        <div class="example-illustration__bar example-illustration__bar--after"></div>
+      </div>
+      <button class="example-illustration__button" type="button">Стало</button>
+    </div>
+  </section>
+  <section class="collaboration">
+    <h2 class="collaboration__title">приглашаем к сотрудничеству дилеров!</h2>
+    <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+  </section>
+  <section class="map">
+    <img class="map__img" src="https://via.placeholder.com/150x150" width="320" height="400" alt="Офис Cat Energy на карте">
+  </section>
+</main>
+<footer>
+  <a class="logo-footer"><img class="lologo-footer__img" src="https://via.placeholder.com/150x150" width="128" height="24" alt="логотип Cat Energy"></a>
+  <section class="social">
+    <ul class="social__list">
+      <li class="social__item social__item--vk">Вконтакте</li>
+      <li class="social__item social__item--instagram">Инстаграм</li>
+      <li class="social__item social__item--facebook">Фейсбук</li>
+    </ul>
+    <div class="academy">
+      <p class="academy__name">HTML Academy</p>
+      <a class="academy__link" href="https://htmlacademy.ru/intensive/adaptive"><img class="academy__img" src="https://via.placeholder.com/150x150" width="27" height="34" alt="Профессиональный онлайн‑курс HTML и CSS, уровень 2"></a>
+    </div>
+  </section>
+</footer>
+</body>
 </html>
