Закончил разметку 2х страниц

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
           <a class="site-list__link" href="#">Главная</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="#">Каталог продукции</a>
+          <a class="site-list__link" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link" href="#">Подбор Программы</a>
@@ -93,24 +93,26 @@
       </ul>
     </div>
     <div class="example-illustration__toggle">
-      <button class="example-illustration__button" type="button">Было</button>
+      <button class="example-illustration__button example-slider__button" type="button">Было</button>
       <div class="example-illustration__scale">
         <div class="example-illustration__bar example-illustration__bar--after"></div>
       </div>
-      <button class="example-illustration__button" type="button">Стало</button>
+      <button class="example-illustration__button example-slider__button" type="button">Стало</button>
     </div>
-  </section>
-  <section class="collaboration">
-    <h2 class="collaboration__title">приглашаем к сотрудничеству дилеров!</h2>
-    <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-  </section>
-  <section class="map">
-    <img class="map__img" src="https://via.placeholder.com/150x150" width="320" height="400" alt="Офис Cat Energy на карте">
   </section>
 </main>
 <footer>
+  <section class="collaboration">
+    <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
+    <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+  </section>
+  <section class="map">
+    <h2 class="visually-hidden">Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</h2>
+    <img class="map__img" src="https://via.placeholder.com/150x150" width="320" height="400" alt="Офис Cat Energy на карте">
+  </section>
   <a class="logo-footer"><img class="lologo-footer__img" src="https://via.placeholder.com/150x150" width="128" height="24" alt="логотип Cat Energy"></a>
   <section class="social">
+    <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
     <ul class="social__list">
       <li class="social__item social__item--vk">Вконтакте</li>
       <li class="social__item social__item--instagram">Инстаграм</li>
