--- a/source/index.html
+++ b/source/index.html
@@ -93,11 +93,11 @@
       </ul>
     </div>
     <div class="example-illustration__toggle">
-      <button class="example-illustration__button example-slider__button" type="button">Было</button>
+      <button class="example-illustration__button" type="button">Было</button>
       <div class="example-illustration__scale">
         <div class="example-illustration__bar example-illustration__bar--after"></div>
       </div>
-      <button class="example-illustration__button example-slider__button" type="button">Стало</button>
+      <button class="example-illustration__button" type="button">Стало</button>
     </div>
   </section>
 </main>
