--- a/source/catalog.html
+++ b/source/catalog.html
@@ -223,9 +223,9 @@
   <section class="social">
     <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
     <ul class="social__list">
-      <li class="social__item social__item--vk">Вконтакте</li>
-      <li class="social__item social__item--instagram">Инстаграм</li>
-      <li class="social__item social__item--facebook">Фейсбук</li>
+      <li class="social__item social__item--vk"><a href="#">Вконтакте</a></li>
+      <li class="social__item social__item--instagram"><a href="#">Инстаграм</a></li>
+      <li class="social__item social__item--facebook"><a href="#">Фейсбук</a></li>
     </ul>
     <div class="academy">
       <p class="academy__name">HTML Academy</p>
