--- a/source/catalog.html
+++ b/source/catalog.html
@@ -219,7 +219,7 @@
     <h2 class="visually-hidden">Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</h2>
     <img class="map__img" src="https://via.placeholder.com/150x150" width="320" height="400" alt="Офис Cat Energy на карте">
   </section>
-  <a class="logo-footer"><img class="lologo-footer__img" src="https://via.placeholder.com/150x150" width="128" height="24" alt="логотип Cat Energy"></a>
+  <a class="logo-footer"><img class="logo-footer__img" src="https://via.placeholder.com/150x150" width="128" height="24" alt="логотип Cat Energy"></a>
   <section class="social">
     <h2 class="visually-hidden">Cat Energy в социальных сетях</h2>
     <ul class="social__list">
