3. Завершаем методичную разметку личного проекта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,7 +52,7 @@
               <p class="product__description-value">700 Р.</p>
             </div>
           </div>
-          <a class="product__button catalog-button" href="#">Заказать</a>
+          <a class="product__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="product-catalog">
@@ -76,7 +76,7 @@
               <p class="product__description-value">1000 Р.</p>
             </div>
           </div>
-          <a class="product__button catalog-button" href="#">Заказать</a>
+          <a class="product__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="product-catalog">
@@ -100,7 +100,7 @@
               <p class="product__description-value">700 Р.</p>
             </div>
           </div>
-          <a class="product__button catalog-button" href="#">Заказать</a>
+          <a class="product__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="product-catalog">
@@ -124,7 +124,7 @@
               <p class="product__description-value">1000 Р.</p>
             </div>
           </div>
-          <a class="product__button catalog-button" href="#">Заказать</a>
+          <a class="product__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="product-catalog">
@@ -148,7 +148,7 @@
               <p class="product__description-value">400 Р.</p>
             </div>
           </div>
-          <a class="product__button catalog-button" href="#">Заказать</a>
+          <a class="product__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="product-catalog">
@@ -172,7 +172,7 @@
               <p class="product__description-value">700 Р.</p>
             </div>
           </div>
-          <a class="product__button catalog-button" href="#">Заказать</a>
+          <a class="product__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="product-catalog">
@@ -196,7 +196,7 @@
               <p class="product__description-value">500 Р.</p>
             </div>
           </div>
-          <a class="product__button catalog-button" href="#">Заказать</a>
+          <a class="product__button site-button" href="#">Заказать</a>
         </article>
       </li>
     </ul>
@@ -218,7 +218,7 @@
             <p class="additional-card__value">1 упаковка (100 г)</p>
             <p class="additional-card__price">200 Р.</p>
           </div>
-          <a class="additional-card__button catalog-button" href="#">Заказать</a>
+          <a class="additional-card__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="additional-products__item">
@@ -228,7 +228,7 @@
             <p class="additional-card__value">5 литров</p>
             <p class="additional-card__price">50 Р.</p>
           </div>
-          <a class="additional-card__button catalog-button" href="#">Заказать</a>
+          <a class="additional-card__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="additional-products__item">
@@ -238,7 +238,7 @@
             <p class="additional-card__value">1 литр</p>
             <p class="additional-card__price">100 Р.</p>
           </div>
-          <a class="additional-card__button catalog-button" href="#">Заказать</a>
+          <a class="additional-card__button site-button" href="#">Заказать</a>
         </article>
       </li>
       <li class="additional-products__item">
@@ -248,7 +248,7 @@
             <p class="additional-card__value">1 упаковка (30 г)</p>
             <p class="additional-card__price">300 Р.</p>
           </div>
-          <a class="additional-card__button catalog-button" href="#">Заказать</a>
+          <a class="additional-card__button site-button" href="#">Заказать</a>
         </article>
       </li>
     </ul>
