--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
     <p class="hero__subtitle">Занялся собой? Займись котом!</p>
     <img class="hero__img" src="https://via.placeholder.com/150x150" width="280" height="270"
          alt="Питание Cat Energy Pro со вкусом курицы">
-    <a class="hero__button" href="#">Подобрать програму</a>
+    <a class="hero__button site-button" href="#">Подобрать програму</a>
   </section>
   <section class="advantages">
     <h2 class="visually-hidden">Выбор программы</h2>
