--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,8 +7,7 @@
 <body>
 <header class="page-header">
   <a class="page-header__logo" href="index.html">
-    <img class="page-header__logo-img" src="https://via.placeholder.com/150x150" width="191" height="39"
-         alt="логотип Cat Energy">
+    <img class="page-header__logo-img" src="https://via.placeholder.com/150x150" width="191" height="39" alt="логотип Cat Energy">
   </a>
   <nav class="main-nav">
     <div class="main-nav__wrapper">
@@ -35,8 +34,7 @@
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h2>
           <a class="product__img-link" href="#">
-            <img class="product__img" src="https://via.placeholder.com/150x150"
-                 width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом курицы">
+            <img class="product__img" src="https://via.placeholder.com/150x150" width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом курицы">
           </a>
           <div class="product__description">
             <div class="product__description-wrapper">
@@ -59,8 +57,7 @@
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 1000 г</a></h2>
           <a class="product__img-link" href="#">
-            <img class="product__img" src="https://via.placeholder.com/150x150"
-                 width="140" height="144" alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
+            <img class="product__img" src="https://via.placeholder.com/150x150" width="140" height="144" alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
           </a>
           <div class="product__description">
             <div class="product__description-wrapper">
@@ -83,8 +80,7 @@
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h2>
           <a class="product__img-link" href="#">
-            <img class="product__img" src="https://via.placeholder.com/150x150"
-                 width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
+            <img class="product__img" src="https://via.placeholder.com/150x150" width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
           </a>
           <div class="product__description">
             <div class="product__description-wrapper">
@@ -107,8 +103,7 @@
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 1000 г</a></h2>
           <a class="product__img-link" href="#">
-            <img class="product__img" src="https://via.placeholder.com/150x150"
-                 width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
+            <img class="product__img" src="https://via.placeholder.com/150x150" width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
           </a>
           <div class="product__description">
             <div class="product__description-wrapper">
@@ -131,8 +126,7 @@
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 500 г</a></h2>
           <a class="product__img-link" href="#">
-            <img class="product__img" src="https://via.placeholder.com/150x150"
-                 width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом гречки">
+            <img class="product__img" src="https://via.placeholder.com/150x150" width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом гречки">
           </a>
           <div class="product__description">
             <div class="product__description-wrapper">
@@ -155,8 +149,7 @@
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 1000 г</a></h2>
           <a class="product__img-link" href="#">
-            <img class="product__img" src="https://via.placeholder.com/150x150"
-                 width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом гречки">
+            <img class="product__img" src="https://via.placeholder.com/150x150" width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом гречки">
           </a>
           <div class="product__description">
             <div class="product__description-wrapper">
@@ -179,8 +172,7 @@
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 500 г</a></h2>
           <a class="product__img-link" href="#">
-            <img class="product__img" src="https://via.placeholder.com/150x150"
-                 width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом риса">
+            <img class="product__img" src="https://via.placeholder.com/150x150" width="140" height="144" alt="Корм Cat Energy PRO 500 г со вкусом риса">
           </a>
           <div class="product__description">
             <div class="product__description-wrapper">
@@ -202,8 +194,7 @@
     </ul>
   </section>
   <section class="more-products">
-    <img class="more-products__plus" src="https://via.placeholder.com/150x150" width="31" height="31"
-         alt="Показать больше товаров">
+    <img class="more-products__plus" src="https://via.placeholder.com/150x150" width="31" height="31" alt="Показать больше товаров">
     <h2 class="more-products__title">Показать еще 100500 товаров</h2>
     <p class="more-products__description">На самом деле вкусов гораздо больше!</p>
     <a class="more-products__button-link" href="#">Показать все</a>
@@ -259,12 +250,10 @@
   <section class="footer__collaboration collaboration">
     <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
     <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    <img class="collaboration__map-img" src="https://via.placeholder.com/150x150" width="320" height="400"
-         alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+    <img class="collaboration__map-img" src="https://via.placeholder.com/150x150" width="320" height="400" alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
   </section>
   <a class="footer__logo">
-    <img class="footer__logo-img" src="https://via.placeholder.com/150x150" width="128" height="24"
-         alt="логотип Cat Energy">
+    <img class="footer__logo-img" src="https://via.placeholder.com/150x150" width="128" height="24" alt="логотип Cat Energy">
   </a>
   <ul class="footer__social-list">
     <li class="footer__social-item"><a class="footer__social-link footer__social-link--vk" href="#">Вконтакте</a></li>
@@ -274,8 +263,7 @@
   <div class="footer__academy">
     <p class="footer__academy-name">HTML Academy</p>
     <a class="footer__academy-link" href="https://htmlacademy.ru/intensive/adaptive">
-      <img class="footer__academy-img" src="https://via.placeholder.com/150x150" width="27" height="34"
-           alt="Профессиональный онлайн‑курс HTML и CSS, уровень 2">
+      <img class="footer__academy-img" src="https://via.placeholder.com/150x150" width="27" height="34" alt="Профессиональный онлайн‑курс HTML и CSS, уровень 2">
     </a>
   </div>
 </footer>
