--- a/source/form.html
+++ b/source/form.html
@@ -7,8 +7,7 @@
 <body>
 <header class="page-header">
   <a class="page-header__logo" href="index.html">
-    <img class="page-header__logo-img" src="https://via.placeholder.com/150x150" width="191" height="39"
-         alt="логотип Cat Energy">
+    <img class="page-header__logo-img" src="https://via.placeholder.com/150x150" width="191" height="39" alt="логотип Cat Energy">
   </a>
   <nav class="main-nav">
     <div class="main-nav__wrapper">
@@ -31,8 +30,7 @@
   <section class="programs-selection">
     <h1 class="programs-selection__title">Подбор программы</h1>
     <form class="programs-selection__form program-form" action="https://echo.htmlacademy.ru" method="post">
-      <p class="program-form_description">Заполните анкету и мы подберем
-        программу питания для вашего кота</p>
+      <p class="program-form_description">Заполните анкету и мы подберем программу питания для вашего кота</p>
       <ul class="program-form__list">
         <li class="program-form__item">
           <label class="program-form__label" for="nickname">Имя:*</label>
@@ -69,13 +67,11 @@
         <ul class="program-form__list">
           <li class="program-form__item">
             <label class="program-form__label" for="email">E-mail:*</label>
-            <input class="program-form__input program-form__input--email" type="text" id="email"
-                   placeholder="kuklachev@gmail.com">
+            <input class="program-form__input program-form__input--email" type="text" id="email" placeholder="kuklachev@gmail.com">
           </li>
           <li class="program-form__item">
             <label class="program-form__label" for="phone">Телефон:*</label>
-            <input class="program-form__input program-form__input--phone" type="text" id="phone"
-                   placeholder="8 (960) 900-60-90">
+            <input class="program-form__input program-form__input--phone" type="text" id="phone" placeholder="8 (960) 900-60-90">
           </li>
         </ul>
       </section>
@@ -104,7 +100,7 @@
           </li>
         </ul>
       </fieldset>
-      <!--почему-то не подцепляетданные из формы-->
+      <!--почему-то не подцепляет данные из формы-->
       <button class="program-form__button site-button" type="submit">Отправить заявку</button>
       <!--<a class="program-form__button site-button" href="#">Отправить заявку</a>-->
       <small>* — Обязательные поля</small>
@@ -115,12 +111,10 @@
   <section class="footer__collaboration collaboration">
     <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
     <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    <img class="collaboration__map-img" src="https://via.placeholder.com/150x150" width="320" height="400"
-         alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+    <img class="collaboration__map-img" src="https://via.placeholder.com/150x150" width="320" height="400" alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
   </section>
   <a class="footer__logo">
-    <img class="footer__logo-img" src="https://via.placeholder.com/150x150" width="128" height="24"
-         alt="логотип Cat Energy">
+    <img class="footer__logo-img" src="https://via.placeholder.com/150x150" width="128" height="24" alt="логотип Cat Energy">
   </a>
   <ul class="footer__social-list">
     <li class="footer__social-item"><a class="footer__social-link footer__social-link--vk" href="#">Вконтакте</a></li>
@@ -130,8 +124,7 @@
   <div class="footer__academy">
     <p class="footer__academy-name">HTML Academy</p>
     <a class="footer__academy-link" href="https://htmlacademy.ru/intensive/adaptive">
-      <img class="footer__academy-img" src="https://via.placeholder.com/150x150" width="27" height="34"
-           alt="Профессиональный онлайн‑курс HTML и CSS, уровень 2">
+      <img class="footer__academy-img" src="https://via.placeholder.com/150x150" width="27" height="34" alt="Профессиональный онлайн‑курс HTML и CSS, уровень 2">
     </a>
   </div>
 </footer>
