--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,7 @@
 <body>
 <header class="page-header">
   <a class="page-header__logo">
-    <img class="page-header__logo-img" src="https://via.placeholder.com/150x150" width="191" height="39"
-         alt="логотип Cat Energy">
+    <img class="page-header__logo-img" src="https://via.placeholder.com/150x150" width="191" height="39" alt="логотип Cat Energy">
   </a>
   <nav class="main-nav">
     <div class="main-nav__wrapper">
@@ -31,8 +30,7 @@
   <section class="hero">
     <h1 class="hero__title">Функциональное питание для котов</h1>
     <p class="hero__subtitle">Занялся собой? Займись котом!</p>
-    <img class="hero__img" src="https://via.placeholder.com/150x150" width="280" height="270"
-         alt="Питание Cat Energy Pro со вкусом курицы">
+    <img class="hero__img" src="https://via.placeholder.com/150x150" width="280" height="270" alt="Питание Cat Energy Pro со вкусом курицы">
     <a class="hero__button site-button" href="#">Подобрать програму</a>
   </section>
   <section class="advantages">
@@ -40,14 +38,12 @@
     <ul class="advantages__list">
       <li class="advantages__item advantages__item--sit">
         <h3 class="advantages__title">Похудение</h3>
-        <p class="advantages__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-          Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+        <p class="advantages__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         <a class="advantages__link" href="#">Каталог slim</a>
       </li>
       <li class="advantages__item advantages__item--stand">
         <h3 class="advantages__title">Набор массы</h3>
-        <p class="advantages__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-          поможет вашему коту нарастить необходимые мышцы!</p>
+        <p class="advantages__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
         <a class="advantages__link" href="#">Каталог pro</a>
       </li>
     </ul>
@@ -71,9 +67,7 @@
   </section>
   <section class="example">
     <h2 class="example__title">Живой пример</h2>
-    <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-      Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в
-      день. </p>
+    <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
     <ul class="example-illustration__list">
       <li class="example-illustration__item">
         <p class="example-illustration__value example-illustration__value--border">5 кг</p>
@@ -88,12 +82,10 @@
     <div class="example-illustration__slider example-slider">
       <ul class="example-slider__list">
         <li class="example-slider__item">
-          <img class="example-illustration__img" src="https://via.placeholder.com/150x150" width="311" height="232"
-               alt="Ваша кошка До замены обычного корма, на корм Cat Energy Slim">
+          <img class="example-illustration__img" src="https://via.placeholder.com/150x150" width="311" height="232" alt="Ваша кошка До замены обычного корма, на корм Cat Energy Slim">
         </li>
         <li class="example-slider__item">
-          <img class="example-illustration__img" src="https://via.placeholder.com/150x150" width="311" height="232"
-               alt="Ваша кошка После замены обычного корма, на корм Cat Energy Slim">
+          <img class="example-illustration__img" src="https://via.placeholder.com/150x150" width="311" height="232" alt="Ваша кошка После замены обычного корма, на корм Cat Energy Slim">
         </li>
       </ul>
     </div>
@@ -110,12 +102,10 @@
   <section class="footer__collaboration collaboration">
     <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
     <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    <img class="collaboration__map-img" src="https://via.placeholder.com/150x150" width="320" height="400"
-         alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+    <img class="collaboration__map-img" src="https://via.placeholder.com/150x150" width="320" height="400" alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
   </section>
   <a class="footer__logo">
-    <img class="footer__logo-img" src="https://via.placeholder.com/150x150" width="128" height="24"
-         alt="логотип Cat Energy">
+    <img class="footer__logo-img" src="https://via.placeholder.com/150x150" width="128" height="24" alt="логотип Cat Energy">
   </a>
   <ul class="footer__social-list">
     <li class="footer__social-item"><a class="footer__social-link footer__social-link--vk" href="#">Вконтакте</a></li>
@@ -125,8 +115,7 @@
   <div class="footer__academy">
     <p class="footer__academy-name">HTML Academy</p>
     <a class="footer__academy-link" href="https://htmlacademy.ru/intensive/adaptive">
-      <img class="footer__academy-img" src="https://via.placeholder.com/150x150" width="27" height="34"
-           alt="Профессиональный онлайн‑курс HTML и CSS, уровень 2">
+      <img class="footer__academy-img" src="https://via.placeholder.com/150x150" width="27" height="34" alt="Профессиональный онлайн‑курс HTML и CSS, уровень 2">
     </a>
   </div>
 </footer>
