--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,7 +19,7 @@
           <a class="site-list__link">Каталог продукции</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="#">Подбор Программы</a>
+          <a class="site-list__link" href="form.html">Подбор Программы</a>
         </li>
       </ul>
     </div>
