--- a/source/catalog.html
+++ b/source/catalog.html
@@ -32,7 +32,7 @@
   <section class="product-catalog">
     <h1 class="product-catalog__title">Каталог продукции</h1>
     <ul class="product-catalog__list">
-      <li class="product-catalog">
+      <li class="product-catalog__item">
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h2>
           <a class="product__img-link" href="#">
@@ -56,7 +56,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </article>
       </li>
-      <li class="product-catalog">
+      <li class="product-catalog__item">
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 1000 г</a></h2>
           <a class="product__img-link" href="#">
@@ -80,7 +80,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </article>
       </li>
-      <li class="product-catalog">
+      <li class="product-catalog__item">
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h2>
           <a class="product__img-link" href="#">
@@ -104,7 +104,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </article>
       </li>
-      <li class="product-catalog">
+      <li class="product-catalog__item">
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 1000 г</a></h2>
           <a class="product__img-link" href="#">
@@ -128,7 +128,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </article>
       </li>
-      <li class="product-catalog">
+      <li class="product-catalog__item">
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 500 г</a></h2>
           <a class="product__img-link" href="#">
@@ -152,7 +152,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </article>
       </li>
-      <li class="product-catalog">
+      <li class="product-catalog__item">
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 1000 г</a></h2>
           <a class="product__img-link" href="#">
@@ -176,7 +176,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </article>
       </li>
-      <li class="product-catalog">
+      <li class="product-catalog__item">
         <article class="product">
           <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 500 г</a></h2>
           <a class="product__img-link" href="#">
@@ -209,7 +209,7 @@
     <p class="more-products__description">На самом деле вкусов гораздо больше!</p>
     <a class="more-products__button-link" href="#">Показать все</a>
   </section>
-  <section class="additional-products__catalog">
+  <section class="additional-products">
     <h2 class="additional-products__title">Дополнительные товары</h2>
     <ul class="additional-products__list">
       <li class="additional-products__item">
@@ -253,7 +253,7 @@
         </article>
       </li>
     </ul>
-    <p class="related-products__gift">Закажите все и получите чехол для кота в подарок!</p>
+    <p class="additional-products__gift">Закажите все и получите чехол для кота в подарок!</p>
   </section>
 </main>
 <footer class="footer">
