--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
     <button class="page-header__toggle" type="button">Открыть меню</button>
   </nav>
 </header>
-<main class="page-main">
+<main class="main-page">
   <section class="hero">
     <h1 class="hero__title">Функциональное питание для котов</h1>
     <p class="hero__subtitle">Занялся собой? Займись котом!</p>
