--- a/source/form.html
+++ b/source/form.html
@@ -33,7 +33,7 @@
     <h1 class="programs-selection__title">Подбор программы</h1>
     <form class="programs-selection__form program-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="program-form__description">Заполните анкету и мы подберем программу питания для вашего кота</p>
-      <fieldset>
+      <fieldset class="program-form__name">
         <ul class="program-form__list">
           <li class="program-form__item">
             <label class="program-form__label" for="nickname">Имя:*</label>
@@ -49,7 +49,7 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset>
+      <fieldset class="program-form__task">
         <legend class="visually-hidden">Цель программы</legend>
         <ul class="program-form__list-radio">
           <li class="program-form__item-radio">
@@ -86,7 +86,7 @@
         <textarea class="" name="comment" rows="10" wrap="soft"
           placeholder="Расскажите обо всех повадках кота"></textarea>
       </fieldset>
-      <fieldset>
+      <fieldset class="program-form__additionally">
         <legend class="program-form__title program-form__title--additional">Дополнительно</legend>
         <ul class="program-form__list-checkbox">
           <li class="program-form__item-checkbox">
@@ -109,7 +109,7 @@
         </ul>
       </fieldset>
       <button class="program-form__button button" type="submit">Отправить заявку</button>
-      <small>* — Обязательные поля</small>
+      <small class="program-form__small">* — Обязательные поля</small>
     </form>
   </section>
 </main>
